[tool.poetry]
name = "clima"
version = "0.7.12"
description = "Simple boilerplate for cli scripts"
keywords = ["cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X", ]
homepage = "https://github.com/d3rp/clima.git"
authors = ["Joni Turunen <rojun.itu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
setuptools = "^58.2.0"
wheel = "*"
cryptography = "^35.0.0"
bleach = "^4.1.0"
six = "*"
tabulate = "^0.8.7"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "*"
# hypothesis = "*"
mock = "*"
requests = ">=2.25.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
