[tool.poetry]
name = "my_tool"
version = "0.1.0"
description = ""
authors = ["Muumi Pappa <moomins_on_the_road@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
clima = ">=0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
my_tool = "my_tool:main_tool"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
